--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ altair==4.2.2
 attrs==22.2.0
 autograd==1.5
 backports.zoneinfo==0.2.1
+black==23.1.0
 blinker==1.5
 cachetools==5.3.0
 certifi==2022.12.7
@@ -33,11 +34,14 @@ markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 mdurl==0.1.2
+mypy-extensions==1.0.0
 numpy==1.24.2
 packaging==23.0
 pandas==1.5.3
+pathspec==0.11.0
 Pillow==9.4.0
-pkgutil-resolve-name==1.3.10
+pkgutil_resolve_name==1.3.10
+platformdirs==3.1.0
 plotly==5.13.1
 protobuf==3.20.3
 pyarrow==11.0.0
@@ -47,6 +51,7 @@ pymoo==0.6.0.1
 Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.19.3
+PySide2==5.15.2.1
 python-dateutil==2.8.2
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
@@ -55,15 +60,18 @@ rich==13.3.2
 scikit-learn==1.2.1
 scipy==1.10.1
 semver==2.13.0
+shiboken2==5.15.2.1
 six==1.16.0
 smmap==5.0.0
 streamlit==1.19.0
 tenacity==8.2.2
+theeng==1.0
 threadpoolctl==3.1.0
 toml==0.10.2
+tomli==2.0.1
 toolz==0.12.0
 tornado==6.2
-typing-extensions==4.5.0
+typing_extensions==4.5.0
 tzdata==2022.7
 tzlocal==4.2
 urllib3==1.26.14
